--- a/src/nestjs/package.json
+++ b/src/nestjs/package.json
@@ -23,6 +23,7 @@
     "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^9.4.0",
     "@nestjs/core": "^9.4.0",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.4.3",
     "@nestjs/platform-socket.io": "^9.4.3",
     "@nestjs/websockets": "^9.4.3",
