--- a/src/nestjs/package.json
+++ b/src/nestjs/package.json
@@ -26,6 +26,7 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.4.3",
     "@nestjs/platform-socket.io": "^9.4.3",
+    "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^9.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
@@ -36,8 +37,7 @@
     "path": "^0.12.7",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
