--- a/src/vuejs/package.json
+++ b/src/vuejs/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "socket.io-client": "^4.6.2",
     "vue": "^2.7.14",
