--- a/src/nestjs/package.json
+++ b/src/nestjs/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-socket.io": "^9.4.3",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^9.4.3",
+    "@types/passport": "^1.0.12",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express-session": "^1.17.3",
