--- a/src/nestjs/package.json
+++ b/src/nestjs/package.json
@@ -21,8 +21,9 @@
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.0",
-    "@nestjs/common": "^9.4.0",
+    "@nestjs/common": "^9.4.3",
     "@nestjs/core": "^9.4.0",
+    "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.4.3",
     "@nestjs/platform-socket.io": "^9.4.3",
@@ -35,10 +36,12 @@
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "path": "^0.12.7",
-    "pg": "^8.11.0",
+    "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -47,6 +50,8 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.7",
     "@types/jest": "29.5.1",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.16.12",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
