--- a/src/vuejs/package.json
+++ b/src/vuejs/package.json
@@ -11,8 +11,8 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "socket.io-client": "^4.6.2",
-    "vue": "^2.7.14",
-    "vue-router": "^3.6.4"
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -22,6 +22,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "html-webpack-plugin": "^5.5.3",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
