--- a/src/nestjs/package.json
+++ b/src/nestjs/package.json
@@ -34,12 +34,14 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express-session": "^1.17.3",
+    "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "path": "^0.12.7",
     "pg": "^8.11.1",
+    "qrcode": "^1.5.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.17"
