--- a/src/nestjs/package.json
+++ b/src/nestjs/package.json
@@ -31,6 +31,7 @@
     "@nestjs/websockets": "^9.4.3",
     "@types/passport": "^1.0.12",
     "axios": "^1.4.0",
+    "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express-session": "^1.17.3",
