Logout route semble ok, il faudrait la tester dans de vraies conditions maintenant

--- a/.env
+++ b/.env
@@ -12,3 +12,7 @@ IP_FRONTEND='http://localhost:8080'
 IP_REDIRECT='http://localhost:3000/login/42/return'
 IP_BACKEND='http://localhost:3000'
 TWO_FACTOR_AUTH_APP_NAME=42Transcendence
+JWT_ACCESS_TOKEN_SECRET=mysecretkey
+JWT_ACCESS_TOKEN_EXPIRATION_TIME=3600
+ACCESS_TOKEN='my_access_token'
+REFRESH_TOKEN='my_refresh_token'
