--- a/src/nestjs/package.json
+++ b/src/nestjs/package.json
@@ -36,6 +36,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.1",
     "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
