--- a/src/vuejs/package.json
+++ b/src/vuejs/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.8.3",
     "socket.io-client": "^4.6.2",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
