--- a/src/nestjs/package.json
+++ b/src/nestjs/package.json
@@ -27,6 +27,7 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.4.3",
     "@nestjs/platform-socket.io": "^9.4.3",
+    "@nestjs/serve-static": "^4.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^9.4.3",
     "@types/passport": "^1.0.12",
