--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     env_file: .env
     networks:
       - dataflow_network
-      
+
   nestjs:
     container_name: nestjs
     build:
@@ -41,10 +41,9 @@ services:
       - postgresql
     environment:
       - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgresql:5432/${POSTGRES_DB}
-    volumes:  # Indentation corrigée ici
+    volumes:
       - ./src/nestjs:/app
-      - images:/app/vuejs/uploads
-    networks:  # Indentation corrigée ici
+    networks:
       - dataflow_network
 
   vuejs:
@@ -54,7 +53,6 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./src/vuejs:/app
-      - images:/app/uploads
     ports:
       #- "4200:4200"
       - "8080:8080"
@@ -72,6 +70,4 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: /home/adnen/Desktop/VolumeTranscendance2
-  images:
-    driver: local
+      device: /home/adnen/Bureau/volume_adaloui
