--- a/src/vuejs/package.json
+++ b/src/vuejs/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "socket.io-client": "^4.7.2",
