--- a/src/vuejs/package.json
+++ b/src/vuejs/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@kyvg/vue3-notification": "^3.0.2",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "bootstrap-vue": "^2.23.1",
