--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,4 +70,4 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: ../volume_adaloui
+      device: /Users/administrateur/42/data2
