Retirer tous les conosle.log et les fonctions inutiles

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,8 @@ services:
 
   vuejs:
     container_name: vuejs
+    env_file:
+      - .env
     build:
       context: ./src/vuejs
       dockerfile: Dockerfile
